--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ jobs:
       displayName: 'Use Python $(python.version)'
 
     - script: |
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip numpy
         pip install -e .[dev]
       displayName: 'Install dependencies'
 
@@ -64,7 +64,7 @@ jobs:
       displayName: 'Use Python $(python.version)'
 
     - script: |
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip numpy
         pip install -e .[dev]
       displayName: 'Install dependencies'
 
