--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ jobs:
         versionSpec: '12.x'
 
     - script: |
-        brew install boost
+        apt-get install boost-devel
       displayName: "System deps"
 
     - bash: npm install -g yarn
