--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ jobs:
         versionSpec: '12.x'
 
     - script: |
-        sudo apt-get install libboost-dev
+        sudo apt-get install libboost-dev python-pybind11
       displayName: "System deps"
 
     - bash: npm install -g yarn
@@ -82,7 +82,7 @@ jobs:
         versionSpec: '12.x'
 
     - script: |
-        brew install boost cmake
+        brew install boost cmake pybind11
       displayName: "System deps"
 
     - bash: npm install -g yarn
