--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ jobs:
         versionSpec: '12.x'
 
     - script: |
-        sudo apt-get install libboost-dev python-pybind11
+        sudo apt-get install libboost-dev
       displayName: "System deps"
 
     - bash: npm install -g yarn
@@ -39,7 +39,7 @@ jobs:
       displayName: 'Install JS dependencies'
 
     - script: |
-        python -m pip install --upgrade pip numpy pyarrow==0.15.1
+        python -m pip install --upgrade pip numpy pyarrow==0.15.1 pybind11
         pip install -e .[dev]
       displayName: 'Install Python Dependencies'
 
