--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,6 +30,7 @@ jobs:
 
     - script: |
         sudo apt-get install libboost-dev
+        wget https://github.com/pybind/pybind11/archive/v2.5.0.tar.gz && tar xfzv v2.5.0.tar.gz && cd pybind11-2.5.0 && mkdir build && cd build && cmake .. && make -j4 install
       displayName: "System deps"
 
     - bash: npm install -g yarn
@@ -39,7 +40,7 @@ jobs:
       displayName: 'Install JS dependencies'
 
     - script: |
-        python -m pip install --upgrade pip numpy pyarrow==0.15.1 pybind11
+        python -m pip install --upgrade pip numpy pyarrow==0.15.1
         pip install -e .[dev]
       displayName: 'Install Python Dependencies'
 
