--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ jobs:
 
     - script: |
         sudo apt-get install libboost-dev
-        wget https://github.com/pybind/pybind11/archive/v2.5.0.tar.gz && tar xfzv v2.5.0.tar.gz && cd pybind11-2.5.0 && mkdir build && cd build && cmake .. -DPYBIND11_TEST=OFF && sudo make -j4 install
+        wget https://github.com/pybind/pybind11/archive/v2.5.0.tar.gz && tar xfz v2.5.0.tar.gz && cd pybind11-2.5.0 && mkdir build && cd build && cmake .. -DPYBIND11_TEST=OFF && sudo make -j4 install
       displayName: "System deps"
 
     - bash: npm install -g yarn
@@ -40,7 +40,8 @@ jobs:
       displayName: 'Install JS dependencies'
 
     - script: |
-        python -m pip install --upgrade pip numpy pyarrow==0.15.1
+        python -m pip install --upgrade pip numpy
+        wget https://github.com/apache/arrow/archive/apache-arrow-0.15.1.tar.gz >/dev/null 2>&1  && tar xfz apache-arrow-0.15.1.tar.gz && cd arrow-apache-arrow-0.15.1 && mkdir build && cd build && cmake ../cpp/ -DARROW_RPATH_ORIGIN=ON -DARROW_PYTHON=ON -DARROW_FLIGHT=OFF -DARROW_IPC=ON -DARROW_COMPUTE=ON -DCMAKE_INSTALL_PREFIX=/usr -DARROW_DATASET=OFF -DARROW_BUILD_UTILITIES=OFF -DARROW_JEMALLOC=OFF -DARROW_DEPENDENCY_SOURCE=BUNDLED -DARROW_HDFS=OFF -DARROW_WITH_BACKTRACE=OFF -DARROW_WITH_BROTLI=OFF -DARROW_WITH_BZ2=OFF -DARROW_WITH_LZ4=OFF -DARROW_WITH_SNAPPY=OFF -DARROW_WITH_ZLIB=OFF -DARROW_WITH_ZSTD=OFF && make -j2 && sudo make install && cd ../python && PYARROW_BUNDLE_ARROW_CPP=1 sudo python3.7 setup.py install --single-version-externally-managed --record RECORD
         pip install -e .[dev]
       displayName: 'Install Python Dependencies'
 
